0.11.11
Qt 3.1 compile fix
Honor the manual writing app selection for automatic CDRW erasing.
K3b now refuses to use transcode >= 0.6.12 for dvd ripping. The next major version will
	be able to use new transcode versions.
	
0.11.10
Support Mp3 files starting with multiple ID3 tags.
Improved ~ handling in the QuickDirSelector.
Save/Load composer fields in audio projects
Save/Load default DVD Copy reading device
Fixed cdrecord output parsing on Debian
Backported the audio project beautification
Added checks for all TEAC R5XS compatible (and thus non-MMC) writers
Fixed writing speed detection with some DVD writers
Fixed capacity detection with some DVD writers
Fixed VideoCD creation with enabled PBC
Remember the last directory in the filebrowser.
Do not remove successfully created CD/DVD copy images if the writing failes but 
	the user requested to keep the images
	
0.11.9
Fixed data project size calculation (for good this time).
	
0.11.8
K3b now searches for the Debian cdrecord wrapper script and properly selects the cdrecord version to use
	(cdrecord.mmap or cdrecord.shm) based on the kernel version. This should fix all problems with
	K3bSetup on Debian.
Fixed writing speed parsing with patched cdrecord
Add leading zero to tracknumber meta data field when encoding audio tracks.
Fixed data project size calculation if files from different devices have the same inode number.
It is now possible to enter hexadecimal values in the boot image load segment fields.
Fixed external program encoder plugin (this includes lame and flac encoding)

0.11.7
Check size of returned CD-TEXT data to be a multiple of the pack length. This should fix problems
	with CD copy.
Audio Project: Do not overwrite CD-Text values loaded from the project file with the ones detected.
Added --copydvd command line parameter
Do only read MCN and ISRCs when copying an audio cd since scanning them takes a very long time.
Fixed cdrdao 1.1.8 version handling (no ATAPI warning)